--- a/index.html
+++ b/index.html
@@ -8,20 +8,38 @@
 </head>
 <body>
 
-    <h1 class="title">drums</h1>
+    <div class="header">
+        <h1 class="title">drums</h1>
+        <ul>
+            <li>Samples</li>
+            <li><a href="#help">Help</a></li>
+            <li>About</li>
+        </ul>
+    </div>
+    
+
     
     <div class="container">
         <div class="pads" id="pad1">kick</div>
         <div class="pads" id="pad2">snare</div>
         <div class="pads" id="pad3">hihat</div>
         <div class="pads" id="pad4">claps</div>
-        <div class="pads" id="pad5"></div>
-        <div class="pads" id="pad6"></div>
+        <div class="pads" id="pad5">bass I</div>
+        <div class="pads" id="pad6">bass II</div>
 
     </div>
 
-    <div class="box"></div>
-
+    <div class="samples">
+        <h1>Keys:</h1>
+        <ul id="help">
+            <li>|Q -> Kick|</li>
+            <li>|W -> Snare|</li>
+            <li>|E -> Hihat|</li>
+            <li>|A -> Claps|</li>
+            <li>|S -> Bass I|</li>
+            <li>|D -> Bass II|</li>
+        </ul>
+    </div>
 
     <script src="script.js"></script>
 </body>
